easter egg hehe

--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
             <li><code>f1</code>: Show help</li>
             <li><code>ctrl</code> + <code>shift</code> + <code>c</code>: Share build link</li>
             <li><code>ctrl</code> + <code>p</code>: Play &quot;Bad Apple!!&quot;</li>
-            <li><code>ctrl</code> + <code>d</code>: ...</li>
           </ul>
           <h3 id="touch">Touch</h3>
           <ul>
@@ -76,6 +75,12 @@
             <li><code>swipe</code>: Pan</li>
           </ul>
           <a href="https://www.github.com/Tech-Tac/cubes" target="_blank">Source on GitHub</a>
+          <br />
+          <div class="cubes-deco">
+            <div class="cube" style="background-color: #f00"></div>
+            <div class="cube" style="background-color: #0f0"></div>
+            <div class="cube" style="background-color: #00f"></div>
+          </div>
         </div>
       </dialog>
     </div>
