Added drag rotating

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <li><code>RMB</code>: Break cube</li>
             <li><code>MMB</code>: Pick color</li>
             <li><code>drag color-picker to cube</code>: Pick color</li>
+            <li><code>RMB</code> + <code>drag</code>: Rotate view (locked to 90° increments)</li>
             <li><code>wheel up</code>: Zoom in</li>
             <li><code>wheel down</code>: Zoom out</li>
             <li><code>drag</code>: Pan</li>
