Added painting/recoloring cubes

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><code>LMB</code>: Place cube</li>
             <li><code>shift</code> + <code>LMB</code>: Place cube (opposite face)</li>
             <li><code>alt</code> + <code>drag</code>: Draw with cubes</li>
+            <li><code>ctrl</code> + <code>drag</code>: Paint cubes with color</li>
             <li><code>RMB</code>: Break cube</li>
             <li><code>MMB</code>: Pick color</li>
             <li><code>drag color-picker to cube</code>: Pick color</li>
