--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li><code>ctrl</code> + <code>s</code>: Save</li>
             <li><code>ctrl</code> + <code>o</code>: Open file...</li>
             <li><code>ctrl</code> + <code>r</code>: Clear all cubes</li>
+            <li><code>ctrl</code> + <code>b</code>: Balls</li>
             <li><code>f1</code>: Show help</li>
             <li><code>ctrl</code> + <code>shift</code> + <code>c</code>: Share build link</li>
             <li><code>ctrl</code> + <code>p</code>: Play &quot;Bad Apple!!&quot;</li>
