Help Button Cube Balls (#3)
Changes the cubes in the help menu to balls when in balls mode

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <dialog id="dlg-help">
         <button autofocus title="Close" class="btn-cube btn-close"></button>
         <div class="content">
-          <p>Make 3D builds out of little cubes, you can change cube colors, view from a different angle, and save/share your build!</p>
+          <p>Make 3D builds out of little <span id="helpBtnCubeBalls">cubes</span>, you can change cube colors, view from a different angle, and save/share your build!</p>
           <h2 id="controls">Controls</h2>
           <ul>
             <li><code>LMB</code>: Place cube</li>
